--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -21,5 +22,14 @@ section{
 .link-button{
     text-decoration: none;
     background-color: orange;
+    background-image: linear-gradient(orange, tomato);
+    color: white;
+    font-weight: 700;
     padding: 10px 40px;
+    border-radius: 5px;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+    
 }
