--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width{
@@ -17,7 +18,7 @@ section{
     padding-left: 5%;
 }
 .half-width img {
-    width: 60%;
+    width: 80%;
 }
 .link-button{
     text-decoration: none;
@@ -32,4 +33,9 @@ section{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
     
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat ;
+    background-position: right;
 }
