experience and footer

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 .colorheader{
     color:crimson;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -38,4 +38,30 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat ;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-iteam{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px 2px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+#full{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange,crimson );
+    border-image-slice: 1;
+}
+#baby{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan );
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
